Use overflow-wrap: anywhere for secret type. Fixes #1109

--- a/dashboard/src/components/AppView/ResourceTable/ResourceItem/SecretItem/SecretContent.scss
+++ b/dashboard/src/components/AppView/ResourceTable/ResourceItem/SecretItem/SecretContent.scss
@@ -9,8 +9,12 @@
   margin: 0;
   min-width: 0;
   white-space: pre-wrap;
-  word-wrap: break-word;
+  overflow-wrap: anywhere;
   padding-left: 0.3em;
   padding-right: 0.3em;
   color: inherit;
+}
+
+.SecretType {
+  overflow-wrap: anywhere;
 }
